# ccny-course-catalog-wrapper

./: Cargo.toml  README.md  administration_data.json  anthropology_data.json  architecture_data.json  art_data.json  biology_data.json  biomedical education_data.json  biomedical engineering_data.json  chemical engineering_data.json  chemistry_data.json  civil engineering_data.json  classical and modern languages and literatures_data.json  computer science_data.json  csc_courses.json  cuny honors college_data.json  earth and atmospheric science_data.json  economics and business_data.json  education_data.json  electrical engineering_data.json  engineering_data.json  english_data.json  history_data.json  humanities and the arts_data.json  interdisciplinary arts and sciences_data.json  latin american & latino studies_data.json  learning leadership and culture_data.json  mathematics_data.json  mechanical engineering_data.json  media and communication arts_data.json  music_data.json  philosophy_data.json  physics_data.json  political science_data.json  psychology_data.json  science_data.json  social science_data.json  sociology_data.json  teaching and learning_data.json  theatre and speech_data.json
src/: ccny_course_catalog.rs  lib.rs  main.rs
src/api/: course_finder.rs  department.rs  mod.rs  utils.rs
src/dataStructures/: custom_hashmap.rs  custom_lru_cache.rs  mod.rs
src/data_structures/: custom_lru_cache.rs
src/models/: course.rs  mod.rs  storage_models.rs
src/search/: course_finder.rs  matcher.rs  mod.rs
src/storage/: mod.rs
src/utils/: mod.rs
